--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Mostafa Mahmoud </title>
+    <title>Mostafa Mahmoud</title>
     <meta name="author" content="Mostafa" />
     <meta name="description" content="Profile" />
     <meta charset="UTF-8">
@@ -188,11 +188,13 @@
                             <ul class="list">
                                 <li class="skill-item p-1">HTML</li>
                                 <li class="skill-item p-1">CSS</li>
+                                <li class="skill-item p-1">MUI</li>
                                 <li class="skill-item p-1">Bootstrap</li>
                                 <li class="skill-item p-1">JavaScript</li>
-                                <li class="skill-item p-1">Redux</li>
+                                <li class="skill-item p-1">jQuery</li>
                             </ul>
                             <ul class="list ">
+                                <li class="skill-item p-1">Redux</li>
                                 <li class="skill-item p-1">React.js</li>
                                 <li class="skill-item p-1">Next.js</li>
                                 <li class="skill-item p-1">REST API</li>
@@ -248,6 +250,38 @@
                         </div>
                     </div>
                     <div class="project-contain  my-3 rounded-3 col-lg-4 col-md-6 col-10 show-project "
+                        data-text="React.js">
+                        <img src="images/Quiz.png" class="rounded-3 w-100 project-img" alt="">
+                        <div class="content-contain rounded-3"></div>
+                        <div class="content w-100  text-center">
+                            <div class="d-flex">
+                                <h7 class="bg-dark rounded-3 px-2 py-1 my-2 w-50 mx-1 m-auto">React.js</h7>
+                                <h7 class="bg-dark rounded-3 px-2 py-1 my-2 w-50 mx-1 m-auto">Redux</h7>
+                            </div>
+                            <h4 class="my-2">Quiz App</h4>
+                            <a href="https://quiz-app-blue-nine.vercel.app/" target="_blank"
+                                rel='noopener noreferrer'>
+                                <button class="btn border-0">Show Demo
+                                    <i class="fa-solid hover-ico ms-2 fa-up-right-from-square"></i>
+                                </button>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="project-contain  my-3 rounded-3 col-lg-4 col-md-6 col-10 show-project "
+                    data-text="React.js">
+                    <img src="images/ToDo-List.png" class="rounded-3 w-100 project-img" alt="">
+                    <div class="content-contain rounded-3"></div>
+                    <div class="content w-100  text-center">
+                        <h7 class="bg-dark rounded-3  py-1 my-2 w-25 m-auto">React.js</h7>
+                        <h4 class="my-2">ToDo List</h4>
+                        <a href="https://todo-list-app-eight-omega.vercel.app/" target="_blank">
+                            <button class="btn border-0">Show Demo
+                                <i class="fa-solid hover-ico ms-2 fa-up-right-from-square"></i>
+                            </button>
+                        </a>
+                    </div>
+                </div>
+                    <div class="project-contain  my-3 rounded-3 col-lg-4 col-md-6 col-10 show-project "
                         data-text="HTML CSS JS">
                         <img class="rounded-3 profile-project w-100 project-img" src="images/profile-light.png" alt="">
                         <div class="content-contain"></div>
@@ -260,20 +294,6 @@
                             <h4 class="my-2">Portfolio</h4>
                             <a href="#home">
                                 <button class="btn  border-0">Show Demo
-                                    <i class="fa-solid hover-ico ms-2 fa-up-right-from-square"></i>
-                                </button>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="project-contain  my-3 rounded-3 col-lg-4 col-md-6 col-10 show-project "
-                        data-text="React.js">
-                        <img src="images/ToDo-List.png" class="rounded-3 w-100 project-img" alt="">
-                        <div class="content-contain rounded-3"></div>
-                        <div class="content w-100  text-center">
-                            <h7 class="bg-dark rounded-3  py-1 my-2 w-25 m-auto">React.js</h7>
-                            <h4 class="my-2">ToDo List</h4>
-                            <a href="https://todo-list-app-eight-omega.vercel.app/" target="_blank">
-                                <button class="btn border-0">Show Demo
                                     <i class="fa-solid hover-ico ms-2 fa-up-right-from-square"></i>
                                 </button>
                             </a>
@@ -333,11 +353,6 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div class="text-center mt-2" data-text="All">
-                    <button type="button" class="btn btn-second btn-light my-3 mx-2">Show More
-                        <i class="fa-solid ms-2 fa-angle-double-down"></i>
-                    </button>
-                </div> -->
             </div>
         </div>
 
