--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                             <ul class="list">
                                 <li class="skill-item p-1">HTML</li>
                                 <li class="skill-item p-1">CSS</li>
-                                <li class="skill-item p-1">MUI</li>
+                                <li class="skill-item p-1">Tailwind CSS</li>
                                 <li class="skill-item p-1">Bootstrap</li>
                                 <li class="skill-item p-1">JavaScript</li>
                                 <li class="skill-item p-1">jQuery</li>
