--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -250,6 +249,23 @@
                         </div>
                     </div>
                     <div class="project-contain  my-3 rounded-3 col-lg-4 col-md-6 col-10 show-project "
+                        data-text="Next.js">
+                        <img src="images/cars.png" class="rounded-3 w-100 project-img" alt="">
+                        <div class="content-contain"></div>
+                        <div class="content w-100  text-center">
+                            <div class="d-flex">
+                                <h7 class="bg-dark rounded-3 px-2 py-1 my-2 mx-1 m-auto">Next.js</h7>
+                                <h7 class="bg-dark rounded-3 px-2 py-1 my-2 mx-1 m-auto">TypeScript</h7>
+                            </div>
+                            <h4 class="my-2">Cars Rental</h4>
+                            <a href="https://cars-rental-kappa.vercel.app/" target="_blank">
+                                <button class="btn  border-0">Show Demo
+                                    <i class="fa-solid hover-ico ms-2 fa-up-right-from-square"></i>
+                                </button>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="project-contain  my-3 rounded-3 col-lg-4 col-md-6 col-10 show-project "
                         data-text="React.js">
                         <img src="images/Quiz.png" class="rounded-3 w-100 project-img" alt="">
                         <div class="content-contain rounded-3"></div>
@@ -259,8 +275,7 @@
                                 <h7 class="bg-dark rounded-3 px-2 py-1 my-2 w-50 mx-1 m-auto">Redux</h7>
                             </div>
                             <h4 class="my-2">Quiz App</h4>
-                            <a href="https://quiz-app-blue-nine.vercel.app/" target="_blank"
-                                rel='noopener noreferrer'>
+                            <a href="https://quiz-app-blue-nine.vercel.app/" target="_blank" rel='noopener noreferrer'>
                                 <button class="btn border-0">Show Demo
                                     <i class="fa-solid hover-ico ms-2 fa-up-right-from-square"></i>
                                 </button>
@@ -268,19 +283,19 @@
                         </div>
                     </div>
                     <div class="project-contain  my-3 rounded-3 col-lg-4 col-md-6 col-10 show-project "
-                    data-text="React.js">
-                    <img src="images/ToDo-List.png" class="rounded-3 w-100 project-img" alt="">
-                    <div class="content-contain rounded-3"></div>
-                    <div class="content w-100  text-center">
-                        <h7 class="bg-dark rounded-3  py-1 my-2 w-25 m-auto">React.js</h7>
-                        <h4 class="my-2">ToDo List</h4>
-                        <a href="https://todo-list-app-eight-omega.vercel.app/" target="_blank">
-                            <button class="btn border-0">Show Demo
-                                <i class="fa-solid hover-ico ms-2 fa-up-right-from-square"></i>
-                            </button>
-                        </a>
+                        data-text="React.js">
+                        <img src="images/ToDo-List.png" class="rounded-3 w-100 project-img" alt="">
+                        <div class="content-contain rounded-3"></div>
+                        <div class="content w-100  text-center">
+                            <h7 class="bg-dark rounded-3  py-1 my-2 w-25 m-auto">React.js</h7>
+                            <h4 class="my-2">ToDo List</h4>
+                            <a href="https://todo-list-app-eight-omega.vercel.app/" target="_blank">
+                                <button class="btn border-0">Show Demo
+                                    <i class="fa-solid hover-ico ms-2 fa-up-right-from-square"></i>
+                                </button>
+                            </a>
+                        </div>
                     </div>
-                </div>
                     <div class="project-contain  my-3 rounded-3 col-lg-4 col-md-6 col-10 show-project "
                         data-text="HTML CSS JS">
                         <img class="rounded-3 profile-project w-100 project-img" src="images/profile-light.png" alt="">
@@ -386,26 +401,10 @@
                                         </p>
                                     </div>
                                 </div>
-                                <!-- <form>
-                                    <div class="my-2 email">
-                                        <label for="email">Email:</label>
-                                        <input class="form-control" type="email" name="email" id="email" />
-                                    </div>
-                                    <div class="my-2 subject">
-                                        <label for="subject">Subject:</label>
-                                        <input class="form-control" type="text" name="subject" id="subject" />
-                                    </div>
-                                    <div class="my-2 description">
-                                        <label for="description">Description:</label>
-                                        <textarea class="form-control" name="description" rows="2"
-                                            id="description"></textarea>
-                                    </div>
-                                    <button type="submit" class="form-control btn-second mt-2 ">Send</button>
-                                </form> -->
                             </div>
                         </div>
                         <div class="media d-flex my-5 flex-column align-items-center justify-content-center ">
-                            <h2>Social Media</h2>
+                            <h2>Socials</h2>
                             <div class="px-4 my-2">
                                 <a href="https://www.facebook.com/profile.php?id=100007766405910&ref=xav_ig_profile_web"
                                     class="email-col" target="_blank" rel='noopener noreferrer'><i
