--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         </div>
 
         <div class="page-2" id="about">
-            <div class="container h-100 about">
+            <div class="container about">
                 <div class="title position-relative  d-flex justify-content-center align-items-center mb-5">
                     <h2> About</h2>
                     <h3 class=" position-absolute mt-3 fs-1"> About <span class="secondery-text"> Me </span></h3>
@@ -141,7 +141,7 @@
                     </div>
                     <div class="col-md-8 col-md-8 mt-5 col-12 text-start d-flex justify-content-center">
                         <div class="title my-1 col-lg-8 col-md-10 col-12 text-center m-auto">
-                            <!-- <span class="fs-3">Brief</span> -->
+                            <span class="fs-3">Brief</span>
                             <p class="fs-6 py-3 ">Graduated from faculty of Computers and Artificial intelligence Helwan
                                 University
                                 in June 2023, with deep knowledge in Computer Science and related fields,
@@ -249,17 +249,32 @@
                         </div>
                     </div>
                     <div class="project-contain  my-3 rounded-3 col-lg-4 col-md-6 col-10 show-project "
-                        data-text="Next.js">
-                        <img src="images/cars.png" class="rounded-3 w-100 project-img" alt="">
+                        data-text="HTML CSS JS">
+                        <img class="rounded-3 profile-project w-100 project-img" src="images/profile-light.png" alt="">
                         <div class="content-contain"></div>
                         <div class="content w-100  text-center">
                             <div class="d-flex">
-                                <h7 class="bg-dark rounded-3 px-2 py-1 my-2 mx-1 m-auto">Next.js</h7>
-                                <h7 class="bg-dark rounded-3 px-2 py-1 my-2 mx-1 m-auto">TypeScript</h7>
+                                <h7 class="bg-dark rounded-3 px-2 py-1 my-2 w-50 mx-1 m-auto">HTML</h7>
+                                <h7 class="bg-dark rounded-3 px-2 py-1 my-2 w-50 mx-1 m-auto">CSS</h7>
+                                <h7 class="bg-dark rounded-3 px-2 py-1 my-2 w-50 mx-1 m-auto">JS</h7>
                             </div>
-                            <h4 class="my-2">Cars Rental</h4>
-                            <a href="https://cars-rental-kappa.vercel.app/" target="_blank">
+                            <h4 class="my-2">Portfolio</h4>
+                            <a href="#home">
                                 <button class="btn  border-0">Show Demo
+                                    <i class="fa-solid hover-ico ms-2 fa-up-right-from-square"></i>
+                                </button>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="project-contain  my-3 rounded-3 col-lg-4 col-md-6 col-10 show-project "
+                        data-text="React.js">
+                        <img src="images/ToDo-List.png" class="rounded-3 w-100 project-img" alt="">
+                        <div class="content-contain rounded-3"></div>
+                        <div class="content w-100  text-center">
+                            <h7 class="bg-dark rounded-3  py-1 my-2 w-25 m-auto">React.js</h7>
+                            <h4 class="my-2">ToDo List</h4>
+                            <a href="https://todo-list-app-eight-omega.vercel.app/" target="_blank">
+                                <button class="btn border-0">Show Demo
                                     <i class="fa-solid hover-ico ms-2 fa-up-right-from-square"></i>
                                 </button>
                             </a>
@@ -283,31 +298,16 @@
                         </div>
                     </div>
                     <div class="project-contain  my-3 rounded-3 col-lg-4 col-md-6 col-10 show-project "
-                        data-text="React.js">
-                        <img src="images/ToDo-List.png" class="rounded-3 w-100 project-img" alt="">
-                        <div class="content-contain rounded-3"></div>
-                        <div class="content w-100  text-center">
-                            <h7 class="bg-dark rounded-3  py-1 my-2 w-25 m-auto">React.js</h7>
-                            <h4 class="my-2">ToDo List</h4>
-                            <a href="https://todo-list-app-eight-omega.vercel.app/" target="_blank">
-                                <button class="btn border-0">Show Demo
-                                    <i class="fa-solid hover-ico ms-2 fa-up-right-from-square"></i>
-                                </button>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="project-contain  my-3 rounded-3 col-lg-4 col-md-6 col-10 show-project "
-                        data-text="HTML CSS JS">
-                        <img class="rounded-3 profile-project w-100 project-img" src="images/profile-light.png" alt="">
+                        data-text="Next.js">
+                        <img src="images/cars.png" class="rounded-3 w-100 project-img" alt="">
                         <div class="content-contain"></div>
                         <div class="content w-100  text-center">
                             <div class="d-flex">
-                                <h7 class="bg-dark rounded-3 px-2 py-1 my-2 w-50 mx-1 m-auto">HTML</h7>
-                                <h7 class="bg-dark rounded-3 px-2 py-1 my-2 w-50 mx-1 m-auto">CSS</h7>
-                                <h7 class="bg-dark rounded-3 px-2 py-1 my-2 w-50 mx-1 m-auto">JS</h7>
+                                <h7 class="bg-dark rounded-3 px-2 py-1 my-2 mx-1 m-auto">Next.js</h7>
+                                <h7 class="bg-dark rounded-3 px-2 py-1 my-2 mx-1 m-auto">TypeScript</h7>
                             </div>
-                            <h4 class="my-2">Portfolio</h4>
-                            <a href="#home">
+                            <h4 class="my-2">Cars Rental</h4>
+                            <a href="https://cars-rental-kappa.vercel.app/" target="_blank">
                                 <button class="btn  border-0">Show Demo
                                     <i class="fa-solid hover-ico ms-2 fa-up-right-from-square"></i>
                                 </button>
