--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@
                             <div>
                                 <span class="fs-3">Work Experience</span>
                             </div>
-                            <div class="d-flex my-2 gap-2 flex-wrap justify-content-center">
+                            <div class="d-flex my-2 flex-wrap justify-content-center">
                                 <span class="fs-5">Camp Coding | </span>
-                                <p class="fs-5"> Dec 2023 - present </p>
+                                <p class="fs-5 px-2"> Dec 2023 - present </p>
                             </div>
                             <div>
                                 <ul class="list">
