--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         </div>
                     </div>
                     <div
-                        class="col-lg-4 col-md-6 col-sm-6 col-11 d-flex justify-content-md-start justify-content-center  mt-5 home-img">
+                        class="col-lg-4 col-md-6 col-sm-6 col-11 d-flex justify-content-md-start justify-content-center  mt-4 home-img">
                         <div class="profile">
                             <img src="images/Mo.JPG" class="w-100 rounded-5 rounded-circle" alt="">
                         </div>
@@ -141,17 +141,17 @@
                     </div>
                     <div class="col-md-8 col-md-8 mt-5 col-12 text-start d-flex justify-content-center">
                         <div class="title my-1 col-lg-8 col-md-10 col-12 text-center m-auto">
-                            <!-- <span class="fs-3">Brief</span> -->
-                            <!-- <p class="fs-6 py-3 ">Graduated from faculty of Computers and Artificial intelligence Helwan
+                            <span class="fs-3">Summary</span>
+                            <p class="fs-5 ">Graduated from faculty of Computers and Artificial intelligence Helwan
                                 University
                                 in June 2023, with deep knowledge in Computer Science and related fields,
                                 and I specialized in Web Development ( Frontend )
-                            </p> -->
+                            </p>
                             <div class="mb-5">
                                 <span class="fs-3">Education</span>
                                 <p class="fs-5"> Bachelor's Degree in Computer Science from Helwan University</p>
                             </div>
-                            <div>
+                            <!-- <div>
                                 <span class="fs-3">Work Experience</span>
                             </div>
                             <div class="d-flex my-2 flex-wrap justify-content-center">
@@ -165,7 +165,7 @@
                                     <li class="skill-item py-2"> Build fully responsive web applications from scratch
                                         with React.js and Next.js</li>
                                 </ul>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
