--- a/index.html
+++ b/index.html
@@ -141,18 +141,18 @@
                     </div>
                     <div class="col-md-8 col-md-8 mt-5 col-12 text-start d-flex justify-content-center">
                         <div class="title my-1 col-lg-8 col-md-10 col-12 text-center m-auto">
-                            <span class="fs-3">Summary</span>
+                            <!-- <span class="fs-3">Summary</span>
                             <p class="fs-6">Graduated from faculty of Computers and Artificial intelligence Helwan
                                 University
                                 in June 2023, with deep knowledge in Computer Science and related fields,
                                 and I specialized in Web Development ( Frontend )
-                            </p>
+                            </p> -->
                             <div class="mb-5">
                                 <span class="fs-3">Education</span>
                                 <p class="fs-5"> Bachelor's Degree in Computer Science from Helwan University</p>
                             </div>
-                            <!-- <div>
-                                <span class="fs-3">Work Experience</span>
+                            <div>
+                                <span class="fs-3">Experience</span>
                             </div>
                             <div class="d-flex my-2 flex-wrap justify-content-center">
                                 <span class="fs-5">Camp Coding | </span>
@@ -165,7 +165,7 @@
                                     <li class="skill-item py-2"> Build fully responsive web applications from scratch
                                         with React.js and Next.js</li>
                                 </ul>
-                            </div> -->
+                            </div>
                         </div>
                     </div>
                 </div>
