--- a/index.html
+++ b/index.html
@@ -154,13 +154,16 @@
                             <div>
                                 <span class="fs-3">Experience</span>
                             </div>
-                            <div class="d-flex my-2 flex-wrap justify-content-center">
-                                <span class="fs-5">Camp Coding | </span>
-                                <p class="fs-5 px-2"> Dec 2023 - present </p>
+                            <div class="d-flex mt-2 flex-wrap justify-content-center">
+                                <span class="fs-5 px-2 fw-bold">Frontend Developer</span>
+                                <span class="fs-5">|</span>
+                                <span class="fs-5 px-2"> Camp Coding </span>
                             </div>
+                            <p class="fs-5 px-2"> ( Dec 2023 - present ) </p>
                             <div>
                                 <ul class="list">
-                                    <li class="skill-item py-2">Work with clients and coordinate with a team of UI/UX and
+                                    <li class="skill-item py-2">Work with clients and coordinate with a team of UI/UX
+                                        and
                                         Backend developers to meet project goals and requirements </li>
                                     <li class="skill-item py-2"> Build fully responsive web applications from scratch
                                         with React.js and Next.js</li>
@@ -190,7 +193,7 @@
                         <div class="service-contain h-100 p-4 my-3 m-auto rounded-3 col-lg-5 col-md-10 col-12">
                             <i class="fa-solid secondery-text mb-1 fa-mobile-screen-button fs-3"></i>
                             <i class="fa-solid secondery-text mb-1 fa-display fs-3"></i>
-                            <h4 class="mb-4">Responsive Design</h4>
+                            <h4 class="mb-4">RWD</h4>
                             <p class="mb-0">
                                 Designing websites that work highly efficient on any screen size
                             </p>
@@ -206,6 +209,7 @@
                                 <li class="skill-item p-1">Bootstrap</li>
                                 <li class="skill-item p-1">JavaScript</li>
                                 <li class="skill-item p-1">jQuery</li>
+                                <li class="skill-item p-1">Context</li>
                             </ul>
                             <ul class="list ">
                                 <li class="skill-item p-1">Redux</li>
@@ -213,7 +217,8 @@
                                 <li class="skill-item p-1">Next.js</li>
                                 <li class="skill-item p-1">REST API</li>
                                 <li class="skill-item p-1">TypeScript</li>
-                                <li class="skill-item p-1">Git & GitHub</li>
+                                <li class="skill-item p-1">Git</li>
+                                <li class="skill-item p-1">GitHub</li>
                             </ul>
                         </div>
                     </div>
