--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                     <button type="button" class="btn btn-dark  active">All</button>
                     <button type="button" class="btn btn-dark ">React.js</button>
                     <button type="button" class="btn btn-dark ">Next.js</button>
-                    <button type="button" class="btn btn-dark ">HTML CSS JS</button>
+                    <button type="button" class="btn btn-dark ">Vanilla JS</button>
                 </div>
                 <div class="projects row col-11 d-flex align-items-center justify-content-center m-auto ">
                     <div class="project-contain  my-3 rounded-3 col-lg-4 col-md-6 col-10 show-project "
@@ -244,7 +244,10 @@
                         <img src="images/e-commerce-4.png" class="rounded-3 w-100 project-img" alt="">
                         <div class="content-contain rounded-3"></div>
                         <div class="content w-100  text-center">
-                            <h7 class="bg-dark rounded-3  py-1 my-2 w-25 m-auto">React.js</h7>
+                            <div class="d-flex">
+                                <h7 class="bg-dark rounded-3 px-2 py-1 my-2 w-50 mx-1 m-auto">React.js</h7>
+                                <h7 class="bg-dark rounded-3 px-2 py-1 my-2 w-50 mx-1 m-auto">Redux</h7>
+                            </div>
                             <h4 class="my-2">E-commerce</h4>
                             <a href="https://e-commerce-react-js-gamma.vercel.app/" target="_blank"
                                 rel='noopener noreferrer'>
@@ -260,7 +263,7 @@
                         <div class="content-contain"></div>
                         <div class="content w-100  text-center">
                             <h7 class="bg-dark rounded-3  py-1 my-2 w-25 m-auto">Next.js</h7>
-                            <h4 class="my-2">Movies & TV Shows</h4>
+                            <h4 class="my-2">Movies</h4>
                             <a href="https://movies-next-js-one.vercel.app/" target="_blank">
                                 <button class="btn  border-0">Show Demo
                                     <i class="fa-solid hover-ico ms-2 fa-up-right-from-square"></i>
@@ -269,15 +272,11 @@
                         </div>
                     </div>
                     <div class="project-contain  my-3 rounded-3 col-lg-4 col-md-6 col-10 show-project "
-                        data-text="HTML CSS JS">
+                        data-text="Vanilla JS">
                         <img class="rounded-3 profile-project w-100 project-img" src="images/profile-light.png" alt="">
                         <div class="content-contain"></div>
                         <div class="content w-100  text-center">
-                            <div class="d-flex">
-                                <h7 class="bg-dark rounded-3 px-2 py-1 my-2 w-50 mx-1 m-auto">HTML</h7>
-                                <h7 class="bg-dark rounded-3 px-2 py-1 my-2 w-50 mx-1 m-auto">CSS</h7>
-                                <h7 class="bg-dark rounded-3 px-2 py-1 my-2 w-50 mx-1 m-auto">JS</h7>
-                            </div>
+                            <h7 class="bg-dark rounded-3  py-1 my-2 w-25 m-auto">Vanilla JS</h7>
                             <h4 class="my-2">Portfolio</h4>
                             <a href="#home">
                                 <button class="btn  border-0">Show Demo
@@ -335,15 +334,12 @@
                         </div>
                     </div>
                     <div class="project-contain  my-3 rounded-3 col-lg-4 col-md-6 col-10 show-project "
-                        data-text="HTML CSS JS">
+                        data-text="Vanilla JS">
                         <img src="images/Bookmarker2.png" class="rounded-3 w-100 project-img" alt="">
                         <div class="content-contain"></div>
                         <div class="content w-100  text-center">
-                            <div class="d-flex">
-                                <h7 class="bg-dark rounded-3 px-2 py-1 my-2 w-50 mx-1 m-auto">HTML</h7>
-                                <h7 class="bg-dark rounded-3 px-2 py-1 my-2 w-50 mx-1 m-auto">CSS</h7>
-                                <h7 class="bg-dark rounded-3 px-2 py-1 my-2 w-50 mx-1 m-auto">JS</h7>
-                            </div>
+                            <h7 class="bg-dark rounded-3  py-1 my-2 w-25 m-auto">Vanilla JS</h7>
+
                             <h4 class="my-2">BookMarker</h4>
                             <a href="https://bookmarker-green.vercel.app/" target="_blank">
                                 <button class="btn  border-0">Show Demo
@@ -353,15 +349,12 @@
                         </div>
                     </div>
                     <div class="project-contain  my-3 rounded-3 col-lg-4 col-md-6 col-10 show-project "
-                        data-text="HTML CSS JS">
+                        data-text="Vanilla JS">
                         <img src="images/weather.png" class="rounded-3 w-100 project-img" alt="">
                         <div class="content-contain"></div>
                         <div class="content w-100  text-center">
-                            <div class="d-flex">
-                                <h7 class="bg-dark rounded-3 px-2 py-1 my-2 w-50 mx-1 m-auto">HTML</h7>
-                                <h7 class="bg-dark rounded-3 px-2 py-1 my-2 w-50 mx-1 m-auto">CSS</h7>
-                                <h7 class="bg-dark rounded-3 px-2 py-1 my-2 w-50 mx-1 m-auto">JS</h7>
-                            </div>
+                            <h7 class="bg-dark rounded-3  py-1 my-2 w-25 m-auto">Vanilla JS</h7>
+
                             <h4 class="my-2">Weather DB</h4>
                             <a href="https://weather-six-blush.vercel.app/" target="_blank">
                                 <button class="btn  border-0">Show Demo
@@ -371,7 +364,7 @@
                         </div>
                     </div>
                     <div class="project-contain  my-3 rounded-3 col-lg-4 col-md-6 col-10 show-project "
-                        data-text="HTML CSS JS">
+                        data-text="Vanilla JS">
                         <img src="images/bakery.png" class="rounded-3 w-100 project-img" alt="">
                         <div class="content-contain"></div>
                         <div class="content w-100  text-center">
