--- a/index.html
+++ b/index.html
@@ -159,14 +159,18 @@
                                 <span class="fs-5">|</span>
                                 <span class="fs-5 px-2"> Camp Coding </span>
                             </div>
-                            <p class="fs-5 px-2"> ( Dec 2023 - present ) </p>
+                            <p class="fs-5 px-2"> ( Oct 2023 - present ) </p>
                             <div>
                                 <ul class="list">
-                                    <li class="skill-item py-2">Work with clients and coordinate with a team of UI/UX
-                                        and
-                                        Backend developers to meet project goals and requirements </li>
-                                    <li class="skill-item py-2"> Build fully responsive web applications from scratch
-                                        with React.js and Next.js</li>
+                                    <li class="skill-item py-2">
+                                        Work with clients and coordinate with a team of designers and
+                                        Backend developers to meet project goals and requirements
+                                    </li>
+                                    <li class="skill-item py-2">
+                                        Created multiple and fully responsive web applications
+                                        for mobile and desktop devices using React.js and Next.js as well as using HTML,
+                                        CSS and JavaScript
+                                    </li>
                                 </ul>
                             </div>
                         </div>
@@ -183,19 +187,20 @@
                         <h3 class=" position-absolute fs-1 mt-3">Services</h3>
                     </div>
                     <div class="services col-md-7 col-sm-6 mt-5 col-12 text-center d-flex flex-wrap mt-0">
-                        <div class="service-contain h-100  p-4 my-3 m-auto rounded-3 col-lg-5 col-md-10 col-12 ">
+                        <div class="service-contain h-100 p-3 my-3 m-auto rounded-3 col-lg-5 col-md-10 col-12 ">
                             <i class="fa secondery-text mb-2 fa-code fs-3"></i>
                             <h4 class="mb-4">Web Development</h4>
                             <p class="mb-0">
-                                I make sure to deliver the best Design with the best Performance
+                                Optimize components for maximum performance across a vast array of web-capable browsers
                             </p>
                         </div>
-                        <div class="service-contain h-100 p-4 my-3 m-auto rounded-3 col-lg-5 col-md-10 col-12">
+                        <div class="service-contain h-100 p-3 my-3 m-auto rounded-3 col-lg-5 col-md-10 col-12">
                             <i class="fa-solid secondery-text mb-1 fa-mobile-screen-button fs-3"></i>
                             <i class="fa-solid secondery-text mb-1 fa-display fs-3"></i>
                             <h4 class="mb-4">RWD</h4>
                             <p class="mb-0">
-                                Designing websites that work highly efficient on any screen size
+                                Implementing fully responsive web applications that works highly efficient
+                                on every device
                             </p>
                         </div>
                     </div>
