--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                                 <ul class="list">
                                     <li class="skill-item py-2">
                                         Work with clients and coordinate with a team of designers and
-                                        Backend developers to meet project goals and requirements
+                                        Backend developers to meet all projects goals and requirements
                                     </li>
                                     <li class="skill-item py-2">
                                         Created multiple and fully responsive web applications
