--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                                 <span>Dark
                                     <i class="fa-solid px-2 fs-4 fa-moon"></i>
                                 </span>
-                                <span class="visually-hidden">Light
+                                <span class="visually-hidden">Day
                                     <i class="fa-solid px-2 fs-4 fa-sun"></i>
                                 </span>
                             </li>
@@ -141,15 +141,10 @@
                     </div>
                     <div class="col-md-8 col-md-8 mt-5 col-12 text-start d-flex justify-content-center">
                         <div class="title my-1 col-lg-8 col-md-10 col-12 text-center m-auto">
-                            <!-- <span class="fs-3">Summary</span>
-                            <p class="fs-6">Graduated from faculty of Computers and Artificial intelligence Helwan
-                                University
-                                in June 2023, with deep knowledge in Computer Science and related fields,
-                                and I specialized in Web Development ( Frontend )
-                            </p> -->
                             <div class="mb-5">
                                 <span class="fs-3">Education</span>
-                                <p class="fs-5"> Bachelor's Degree in Computer Science from Helwan University</p>
+                                <p class="fs-5 text-white"> Bachelor's Degree in Computer Science, <span
+                                        class="fs-5">Helwan University</span></p>
                             </div>
                             <div>
                                 <span class="fs-3">Experience</span>
@@ -161,15 +156,15 @@
                             </div>
                             <p class="fs-5 px-2"> ( Oct 2023 - present ) </p>
                             <div>
-                                <ul class="list">
-                                    <li class="skill-item py-2">
-                                        Work with clients and coordinate with a team of designers and
-                                        Backend developers to meet all projects goals and requirements
+                                <ul class="list text-start">
+                                    <li class="skill-item py-1 ps-0"> Created multiple responsive web applications for
+                                        mobiles and desktops using
+                                        React.js and Next.js as well as using HTML, CSS and JavaScript.
                                     </li>
-                                    <li class="skill-item py-2">
-                                        Created multiple and fully responsive web applications
-                                        for mobile and desktop devices using React.js and Next.js as well as using HTML,
-                                        CSS and JavaScript
+                                    <li class="skill-item py-1 ps-0">
+                                        Collaborate with a team of designers and backend
+                                        developers to achieve the goals
+                                        and requirements of each project.
                                     </li>
                                 </ul>
                             </div>
