--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                                 <span class="fs-5">|</span>
                                 <span class="fs-5 px-2"> Camp Coding </span>
                             </div>
-                            <p class="fs-5 px-2"> ( Oct 2023 - present ) </p>
+                            <p class="fs-5 px-2"> ( March 2024 - April 2024 ) </p>
                             <div>
                                 <ul class="list text-start">
                                     <li class="skill-item py-1 ps-0"> Created multiple responsive web applications for
